style.css
*{
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
}

nav{
    display: flex;
    justify-content: space-around;
    align-items: center;
    min-height: 8vh;
    background-color: darkcyan;
    font-family: Hack, monospace;
}

.nav-links{
    display: flex;
    justify-content: space-around;
    width: 45%;
}

.nav-links a{
    color: whitesmoke;
    text-decoration: none;
    letter-spacing: 1px;
    font-weight: bold;
    font-size: 14px;
}

.nav-links li{
    list-style: none;
}

.burger div{
    width: 23px;
    height: 2px;
    background-color: whitesmoke;
    margin: 5px;
}

.burger{
    display: none;
    cursor: pointer;
}

.logo{
    color: whitesmoke;
    letter-spacing: 1px;
    font-size: 22px;
}

@media screen and (max-width:1024px){
    body{
        overflow: hidden!important;
    }
    .logo{
        font-size: 60px;
    }
    .nav-links{
        position: absolute;
        right: 0px;
        height: 92vh;
        top: 8vh;
        background-color: darkcyan;
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 50%;
        transform: translateX(100%);
        transition: transform 0.5s ease-in;
    }
    .nav-links li{
        opacity: 0;
    }
    .nav-links a{
        font-size: 38px;
    }
    .burger{
        display: block;
    }
}

.nav-active{
    transform: translateX(0%);
}

@keyframes navLinkFade{
    from{
        opacity: 0;
        transform: translateX(50px);
    }
    to{
        opacity: 1;
        transform: translateX(0px);
    }
}

